# cloud-morph-host

./: .gitignore  .gitmodules  README.md
CloudMorphHostSrc/: CMakeLists.txt  CMakeSettings.json
CloudMorphHostSrc/CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp  CMakeProject2.h  GUI.cpp  MyPlugin.h  MyPlugin2.h  ScreenRecorder.cpp  ScreenRecorder.h
CloudMorphHostSrc/CMakeProject2/data/locale/: en-US.ini
CloudMorphHostSrc/contrib/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/UI/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/UI/frontend-plugins/decklink-output-ui/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/UI/frontend-plugins/frontend-tools/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/UI/obs-frontend-api/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/UI/win-update/updater/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/UI/xdg-data/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/cmake/Modules/: CopyMSVCBins.cmake  ObsCpack.cmake  ObsHelpers.cmake
CloudMorphHostSrc/contrib/obs-studio/libobs/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/libobs-d3d11/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/libobs-opengl/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/libobs-winrt/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/coreaudio-encoder/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/decklink/linux/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/decklink/mac/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/decklink/win/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/enc-amf/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/image-source/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/linux-alsa/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/linux-capture/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/linux-jack/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/linux-pulseaudio/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/linux-v4l2/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/mac-virtualcam/src/obs-plugin/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-browser/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-ffmpeg/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-filters/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-outputs/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-outputs/ftl-sdk/libjansson/cmake/: CodeCoverage.cmake
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-qsv11/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-text/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-transitions/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/obs-x264/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/oss-audio/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/rtmp-services/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/sndio/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/text-freetype2/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/vlc-video/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/win-dshow/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/win-dshow/libdshowcapture/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/win-dshow/virtualcam-module/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/win-ivcam/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/win-mf/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/plugins/win-wasapi/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/test/cmocka/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/test/osx/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/test/test-input/: CMakeLists.txt
CloudMorphHostSrc/contrib/obs-studio/test/win/: CMakeLists.txt
apps/nfhdemo/: JoWooD Productions Software AG.url  Register.url
autoit/: typebackground.au3
cms-encoding/: CMakeLists.txt  README.md
cms-encoding/cms-encoding/: CMakeLists.txt  ScreenRecorder.cpp  cms-encoding.cpp  cms-encoding.h
cms-encoding/src/: CMakeLists.txt  ScreenRecorder.cpp  ScreenRecorder.h  cms-encoding.cpp
gui/: index.css  index.html  main.js  package-lock.json  package.json  preload.js  readme.md  renderer.js
gui/js/: add_app_form.js  modal.js  renderer.js
gui5/: Resource.h  gui5.cpp  gui5.rc  gui5.sln  gui5.vcxproj  gui5.vcxproj.filters
oracle/: README.md
oracle/chainlink/: .env
oracle/smart_contract/: README.md
oracle/smart_contract/contracts/: AirdropRegistry.sol  DcloToken.sol  TimeLockedRegistry.sol  TimeLockedToken.sol
oracle/smart_contract/migrations/: 2_deploy_contracts.js  timelock_and_airdrop_deploy.ts
server/: config.yaml  go.mod  go.sum  main.go  package-lock.json  package.json  prod.db  run-app.bat  test.db  test_temp.db
server/init_db/: init_db.bat  init_db.sql  prefill_data.sql
server/pkg/cloudapp/: cloudapp.go  server.go  service.go
server/pkg/env/: env.go
server/pkg/errors/: error.go
server/pkg/handler/: app.go  base.go  user.go
server/pkg/jwt/: jwt.go
server/pkg/model/: host_config.go  registered_app.go  request_schema.go  response_schema.go  stream_session.go  user.go
server/pkg/perm/: perm.go
server/pkg/schema/: request_schema.go
server/pkg/utils/: utils.go
server/pkg/write/: write.go
server/scripts/: BE_nginx  FE_nginx  declo_backend.service  declo_nginx.com  deploy.sh  transfer.sh
server/web/: host.html  index.html  package-lock.json  package.json  play.html  register.html
streamer/: Dockerfile.update  cloud-morph-host - Shortcut.lnk  go.mod  go.sum  main.go  run-app.bat  run-app.ps1  run-host-app.bat  run-notepad.bat  run-sandbox.ps1  run-update-image.sh  run-wine.sh  start_all.sh  supervisord.conf  syncinput.cpp
syncinput/: syncinput.cpp
(+21 files in other folders)
